--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A generated project at Fullstack Academy",
   "main": "server/start.js",
   "scripts": {
-    "start": "nodemon --watch server -e js,html server/start.js",
-    "postinstall": "gulp build"
+    "postinstall": "gulp build",
+    "start": "nodemon --watch server -e js,html server/start.js"
   },
   "engines": {
     "node": ">=4.0.0"
@@ -18,7 +18,7 @@
     "angular-ui-router": "^0.2.15",
     "babel": "^5.0.12",
     "bluebird": "^2.9.34",
-    "body-parser": "^1.12.0",
+    "body-parser": "^1.14.1",
     "bootstrap": "^3.3.4",
     "chai": "^2.1.0",
     "chalk": "^1.0.0",
