--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mocha-mongoose": "^1.0.3",
     "mongodb": "^1.4.33",
     "mongoose": "^4.0.7",
+    "mongoose-deep-populate": "^2.0.3",
     "node-mongoose-validator": "^1.2.0",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
