--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A generated project at Fullstack Academy",
   "main": "server/start.js",
   "scripts": {
-    "postinstall": "gulp build node seed.js",
+    "postinstall": "gulp build",
     "start": "nodemon --watch server -e js,html server/start.js"
   },
   "engines": {
